# first-agent

./: .env.example  .gitignore  README.md  pyproject.toml
study/: first.py
study/DL/ch03/: mnist_show.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  relu.py  sig_step_compare.py  sigmoid.py  step_function.py
study/DL/ch04/: gradient_1d.py  gradient_2d.py  gradient_method.py  gradient_simplenet.py  train_neuralnet.py  two_layer_net.py
study/DL/ch05/: buy_apple.py  gradient_check.py  train_neuralnet.py  two_layer_net.py
study/DL/common/: functions.py  layers.py  multi_layer_net.py  multi_layer_net_extend.py  trainer.py
study/DL/pytorch/: pytorch_neuralnet.py  test.py
study/LLMs/ch02/: dataloader.py  transformer.py  transformer1.py
study/LLMs/ch03/: attention.py  multihead-attention.py
study/LLMs/ch04/: gpt.py  gpt_clean.py
study/LLMs/ch05/: load_model.py  train_gpt.py  train_gpt_test.py
study/LLMs/ch06/: fine_tuning.py  fine_tuning1.py
study/LLMs/ch07/: instructions_finetuning.py  instructions_finetuning1.py  instructions_finetuning_load_data.py  instructions_finetuning_load_model.py  instructions_finetuning_result.txt
study/RL/: first.py  first1.py  first_dataset.py  first_dataset_trans.py  helloAgent.py  sft1.py  sft_full.py  test.py
study/agent/: 01-agent-loop.py  02-tool-use.py  03-todo-write.py  04-subagent.py  05-skill-loading.py  06_context_compact.py  07_task_system.py  08_background_tasks.py  09_agent_teams.py  10_team_protocols.py  11_autonomous_agents.py  agent01.py  full.py
study/file/: check_pdf_type.py
study/llm/: llm.py
