[project]
name = "first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.10",
    "hello-agents[rl]==0.2.5",
    "langchain-daytona>=0.0.4",
    "langsmith>=0.7.16",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openai>=1.109.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pycryptodome>=3.23.0",
    "pymupdf>=1.27.2",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
